colour change added to mouseover function and &nbsp added to fix whitespace issue

--- a/css/style.css
+++ b/css/style.css
@@ -39,19 +39,12 @@ label {
     color: white; 
 }
 
-/* .fa-solid.fa-envelope, .fa-brands.fa-linkedin-in, .fa-brands.fa-github {
-    height: 10px;
-    width: 10px;
-} */
-
 .intro-info {
     position: relative;
     z-index: 10;
     top: -450px;
     max-width: 600px;
     margin: 0 auto;
-    /* top: 50%;
-    left: 25%; */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -178,10 +171,6 @@ h2 {
 }
 
 .sec1 {
-    /* background: #0F2027;  
-    background: -webkit-linear-gradient(to right, #2C5364, #203A43, #0F2027);  
-    background: linear-gradient(to right, #2C5364, #203A43, #0F2027);  */
-    /* background: var(--color-white); */
     background: #8dd7f4;
     min-height: 100vh;
     width: 100%;
@@ -254,7 +243,6 @@ h2 {
 }
 
 .controls-background {
-    /* background: linear-gradient(to left, #514A9D, #24C6DC); */
     pointer-events: all;  
 }
 
@@ -343,7 +331,7 @@ button:hover {
 
 .heading-4.heading-4--dark {
     margin: 20px 20px 10px 20px;
-    font-weight: bold;
+    font-weight: bolder;
 }
 
 .btn-text {
@@ -379,7 +367,7 @@ footer {
     top: 50%;
     margin: 20px auto;
     text-align: center;
-    width: 100vw;
+    width: 90vw;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: initial;
